yamls/mtls/vs/routing-falut-injection-vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: spring-todo
spec:
  hosts:
  - spring-todo
  http:
  - match:
    - headers:
        end-user:
          exact: admin
    fault:
      abort:
        httpStatus: 500
        percentage: 
          value: 100
    route:
    - destination:
        host: spring-todo
        subset: v2
  - route:
    - destination:
        host: spring-todo
        subset: v1
---
