yamls/mtls/vs/timeout-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: spring-proj
spec:
  hosts:
  - spring-proj
  http:
  - route:
    - destination:
        host: spring-proj
        subset: v1
    timeout : 5s
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: spring-login
spec:
  hosts:
  - spring-login
  http:
  - fault:
      delay:
        fixedDelay: 10s
        percentage:
          value: 100
  - route:
    - destination:
        host: spring-login
        subset: v1
---
