yamls/mtls/vs/traffic-shifting-vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: spring-todo
spec:
  hosts:
  - spring-todo
  http:
  - route:
    - destination:
        host: spring-todo
        subset: v2
        fault:
          abort:
          httpStatus: 500
          percentage:
            value: 100
      weight: 70
    - destination:
        host: spring-todo
        subset: v1
      weight: 30
---
