yamls/mtls/vs/vs-all.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: spring-todo
spec:
  hosts:
  - spring-todo
  http:
  - match:
    #- headers:
    #    end-user:
    #      exact: admin
    fault:
      abort:
        httpStatus: 500
        percentage: 
          value: 100
    route:
    - destination:
        host: spring-todo
        subset: v2
        weight: 50
  - route:
    - destination:
        host: spring-todo
        subset: v1
        weight: 50
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: spring-proj
spec:
  hosts:
  - spring-proj
  http:
  - route:
    - destination:
        host: spring-proj
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: spring-login
spec:
  hosts:
  - spring-login
  http:
  #- fault:
  #    delay:
  #      fixedDelay: 10s
  #      percentage:
  #        value: 100
  - route:
    - destination:
        host: spring-login
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: spring-chat
spec:
  hosts:
  - spring-chat
  http:
  - route:
    - destination:
        host: spring-chat
        subset: v1
